# harmonic-weaver

./: .gitignore  BITACORA.md  LICENSE  README.md  pyproject.toml
contracts/: README.md  instrument_contract.contract_id.golden  instrument_contract.template.json  source_frame.contract_id.golden  source_frame.template.json
docs/: CORE_DESIGN.md  TRANSFORM_PHASE_ACCUMULATOR.md
rehearsal/: README.md  REPORT.md  __init__.py  ecg_simulator.py  run_rehearsal.sh  runner.py  support.py  weaver_runtime.py
rehearsal/artifacts/t45-20260718T104342Z/: results.json  timeline.json
rehearsal/artifacts/t45-20260718T104444Z/: results.json  timeline.json
rehearsal/artifacts/t45-20260718T104523Z/: results.json  timeline.json
rehearsal/artifacts/t45-20260718T104736Z/: results.json  timeline.json
rehearsal/artifacts/t45-20260718T104828Z/: results.json  timeline.json
rehearsal/artifacts/t45-20260718T105326Z/: results.json  run_manifest.json  (+1 more)
rehearsal/scenes/: event_demo.scene.json  instrumento_v1_mvp.scene.json  pads_v1.scene.json  sparse.scene.json
reports/t45-20260718T105726Z/: behavior_events.jsonl  run_config.json  scene_snapshot.json  summary.json
reports/t45-20260718T112715Z/: accepted_contract_ids.json  behavior_events.jsonl  latency_summary.json  run_config.json
scripts/: start-live-stack.sh
src/harmonic_weaver/: contract_codec.py
tests/: test_beat_envelope.py  test_contracts_golden.py  test_ecg_driver.py  test_harmocap_driver.py  test_midi_driver.py  test_pads_e2e.py  test_phase_accumulator.py  test_rehearsal_harness.py  test_transforms_slew.py
(+25 files in other folders)
