[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic-weaver"
version = "0.1.0"
description = "Headless modulation router/patchbay for the Harmonic Beacon ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]
