[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic-weaver"
version = "0.1.0"
description = "Headless modulation router/patchbay for the Harmonic Beacon ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110,<0.116",
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "uvicorn>=0.29,<1",
    "websockets>=12,<16",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1",
    "pytest>=8,<10",
]
rehearsal = [
    "python-osc>=1.8,<2",
    "soundfile>=0.12,<1",
]

[project.scripts]
harmonic-weaver-weaver = "harmonic_weaver.weaver:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harmonic_weaver = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
